--- a/index.html
+++ b/index.html
@@ -688,6 +688,49 @@ document.addEventListener("DOMContentLoaded", () => {
         `;
 
 
+        document.body.appendChild(gameOver);
+        document.getElementById("viewLbAfter")?.addEventListener("click", () => {
+          const gameOverEl = document.getElementById("gameOverOverlay");
+          if (gameOverEl) {
+            gameOverEl.style.display = "none";
+          }
+          showLeaderboard();
+        });
+        return;
+      }
+
+      // (Win detection is handled above before blockers logic)
+    }, 200);
+  } // end initGame
+
+  function createBlockersForLevel(level) {
+    blockers.forEach(blk => blk.remove());
+    blockers = [];
+
+    for (let i = 0; i < level; i++) {
+      const blocker = document.createElement("div");
+      blocker.className = "Character";
+      blocker.style.left = screenW * 0.5 + "px";
+      blocker.style.top = linesY[i] + "px";
+      blocker.setAttribute("facing", "down");
+      blocker.innerHTML = `
+        <img class="Character_shadow pixelart" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/21542/DemoRpgCharacterShadow.png" />
+        <img class="Character_spritesheet pixelart face-down" src="blocker.png" />
+      `;
+      document.body.appendChild(blocker);
+      blockers.push(blocker);
+    }
+  }
+
+  // FINISH LINE CREATOR
+  function createFinishLine(level) {
+    if (finishLine) finishLine.remove(); // remove previous line
+    finishLine = document.createElement("div");
+    finishLine.className = "finish-line";
+    finishLine.style.top = Math.round(linesY[level - 1]) + "px";
+    document.body.appendChild(finishLine);
+  }
+
 
 
 
